--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -123,6 +123,7 @@ header .page-header {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 1.2rem;
+    padding-right: 1.2rem;
     border-bottom: 1px solid #ddddde;
     flex-wrap: wrap;
 }
@@ -177,10 +178,6 @@ header .page-header__right-slot {
         margin-left: -1.5rem;
     }
 
-    header .imenu {
-        padding-left: 0 !important;
-    }
-
     header button kbd {
         display: none;
     }
@@ -202,23 +199,6 @@ header .label {
     color: #5f6165;
     margin-right: 1rem;
     margin-bottom: 0;
-}
-
-/* meny */
-header .imenu {
-    background-color: #fff;
-    margin-left: -0.5rem;
-}
-
-header .imenu__list {
-    gap: 1rem;
-}
-
-header .imenu--horizontal .imenu__list__item {
-    display: inline-flex;
-    padding-top: 1.1rem;
-    padding-left: 0;
-    padding-right: 0;
 }
 
 /* navigering vänster */
