--- a/templates/partials/topnav.html
+++ b/templates/partials/topnav.html
@@ -1,44 +1,30 @@
-<nav id="topnav" class="imenu imenu--horizontal" aria-label="Primär">
-    <ul class="imenu__list">
+<nav id="topnav" class="docs-topnav" aria-label="Primär">
+    <ul class="docs-topnav__list">
         <!-- prettier-ignore -->
         {%- for nav in topnav.children -%}
         {% set navPath = nav.path | replace("html", "") %}
         {% set navPath = navPath | replace(".", "") %}
         {% set activePage = navPath in doc.fileInfo.fullPath %}
-        <li class="imenu__list__item {% if activePage %}imenu__list__item--highlight{% endif %}">
-            <div
-                class="imenu__list__anchor-container {% if activePage %}imenu__list__anchor-container--highlight{% endif %}"
-            >
-                <a
-                    class="imenu__list__anchor {% if activePage %}imenu__list__anchor--highlight{% endif %}"
-                    href="{{ nav.path | relative(doc) }}"
-                >
-                    {{ nav.title }}
-                </a>
-            </div>
+        <li class="docs-topnav__item {% if activePage %}highlight{% endif %}">
+            <a class="docs-topnav__anchor" href="{{ nav.path | relative(doc) }}"> {{ nav.title }} </a>
         </li>
         {%- endfor -%}
-        <li class="imenu__list__item imenu__list__item--more" style="visibility: hidden">
-            <div class="imenu__list__anchor-container">
-                <button type="button" class="imenu__list__anchor" aria-expanded="false">
-                    Mer<span class="imenu__list__anchor-span"></span>
-                    <svg class="imenu__list__anchor-icon-right icon" focusable="false" aria-hidden>
-                        <use xlink:href="#docs-icon-arrow-down"></use>
-                    </svg>
-                </button>
-            </div>
-            <div class="ipopupmenu ipopupmenu--vertical">
-                <ul class="ipopupmenu__list ipopupmenu__list--more">
+        <li class="docs-topnav__item docs-topnav__item--more" style="visibility: hidden">
+            <button type="button" class="docs-topnav__anchor" aria-expanded="false">
+                <span>Mer</span>
+                <svg class="icon" focusable="false" aria-hidden="true">
+                    <use xlink:href="#docs-icon-arrow-down"></use>
+                </svg>
+            </button>
+            <div class="docs-contextmenu">
+                <ul class="docs-contextmenu__list">
                     <!-- prettier-ignore -->
                     {%- for nav in topnav.children -%}
                     {% set navPath = nav.path | replace("html", "") %}
                     {% set navPath = navPath | replace(".", "") %}
                     {% set activePage = navPath in doc.fileInfo.fullPath %}
-                    <li
-                        class="ipopupmenu__list__item {% if activePage %}ipopupmenu__list__item--highlight{% endif %}"
-                        style="display: none"
-                    >
-                        <a href="{{ nav.path | relative(doc) }}"> {{ nav.title }} </a>
+                    <li class="docs-contextmenu__item {% if activePage %}highlight{% endif %}" style="display: none">
+                        <a class="docs-contextmenu__anchor" href="{{ nav.path | relative(doc) }}"> {{ nav.title }} </a>
                     </li>
                     {%- endfor -%}
                 </ul>
