feat: bundle highlight styling (refs SB-4982)

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -8,6 +8,7 @@
 @use "skeleton";
 @use "tags";
 @use "version_banner";
+@use "highlight.js/styles/default";
 
 /* reset broken FKUI reset */
 dialog {
