--- a/templates/example.template.html
+++ b/templates/example.template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ site.lang }}" class="layout--example">
+<html lang="{{ site.lang }}" class="layout--example" data-root-url="{{ rootUrl(doc) }}">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
