--- a/templates/example.template.html
+++ b/templates/example.template.html
@@ -63,8 +63,6 @@
             asset.attrs
             }}
         ></script>
-        {%- endfor %}
-
-        <main>{{ content }}</main>
+        {%- endfor %} {{ content }}
     </body>
 </html>
